ipad layout bug - fixed

--- a/app/scss/hp.scss
+++ b/app/scss/hp.scss
@@ -128,6 +128,32 @@ h1.item--title {
   }
 }
 
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+  /* For portrait layouts only */
+  #site-wrapper {
+  }
+}
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+  /* For landscape layouts only */
+    #site-wrapper {
+      max-width: 100%;
+      width : 100%;
+    #lower-site {
+      width : 1000px;
+      max-width: 1000px;
+      display: block;
+      .box {
+        width : 300px;
+        margin: 30px 10px 0 ;
+        float: left;
+        display: block;
+      }
+    }
+  }
+}
+
 /*MOBILE*/
 @media (max-width: 585px) {
   .box {
