--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -138,11 +138,7 @@ input, button, submit {
 
 
 #site-wrapper {
-  // max-width: 1160px;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // align-content: center;
+  overflow: hidden;
   margin: 0 auto;
   padding : 0;
 }
@@ -180,7 +176,9 @@ input, button, submit {
 }
 
 #lower-site, #coast2coast--centered {
+  display: -webkit-flex; /* NEW */
   display: flex;
+  -webkit-flex-wrap: wrap; /* NEW */
   flex-wrap: wrap;
   justify-content: space-around;
   z-index: 9999;
